Complete function and sequence type headers and extend editor parity
Thread explicit header recovery through function and sequence grammar and retain the written leaf with existing ownership. Share eight completion variants between editor drivers and add native type-definition and read-only source assertions. Record full compiler-adapter and packaged-server validation, focused editor results and remaining native coverage gaps.